@@ -18,6 +18,7 @@ export(mod2values)
 export(multipleGroup)
 export(personfit)
 export(polymirt)
+export(probtrace)
 export(read.mirt)
 export(simdata)
 export(testinfo)
